[package]
name = "soroban-repro-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
cargo_metadata = "0.18.1"
clap = { version = "4.5.7", features = ["derive"] }
colored = "2.1.0"
petgraph = "0.6.5"
rand = "0.8.5"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
toml = "0.8.14"

